# Treeeeee

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  configure.sh  makefile  requirements.txt  test.c  tttt
lib/: ini.h
src/: dsyevc3.c  evolution.c  evolution.h  force.c  force.h  force_gpu.cl  force_gpu.cu  force_gpu.h  main.c  main_opencl.c  node_pool.c  node_pool.h  parameter.c  parameter.h  particle.c  particle.h  test_opencl.c  tree.c  tree.h  vec3.h
testcase/test_3body/: Energy.py  README.md  clean.sh  plot.py  run_all.sh
testcase/test_IO/: Input_Parameter.ini
testcase/test_Roche/: Initial_generator.py  README.md  clean.sh  plot.py  plot_energy.py  run_all.sh
testcase/test_distance/: Energy.py  Initial_generator.py  Input_Parameter.ini  clean.sh  plot.py  remove.sh  run_all.sh
testcase/test_double_galaxy/: Initial_generator.py  Input_Parameter.ini  README.md  clean.sh  log  plot.py  run_all.sh
testcase/test_double_plummer/: Energy.py  Energy_e.py  Initial_generator.py  Input_Parameter.ini  README.md  clean.sh  compare.sh  log  nohup.out  plot.py  plot_energy.py  plot_gas.py  run_all.sh
testcase/test_error/: Input_Parameter.ini  README.md  clean.sh  error.py  plot.py  run_all.sh
testcase/test_evolution/: Input_Parameter.ini
testcase/test_galaxy/: Initial_generator.py  Input_Parameter.ini  README.md  clean.sh  compare_v.py  log  nohup.out  plot_energy.py  run_all.sh  velocity.py
testcase/test_performance/: README.md
testcase/test_plummer/: Density.py  Energy.py  Initial_generator.py  Input_Parameter.ini  README.md  clean.sh  plot_density.py  (+2 more)
(+45 files in other folders)
